2003-01-31  Kazu Hirata  <kazu@cs.umass.edu>

        * dejagnu/baseboards/h8300-sim.exp: Don't set
	needs_status_wrapper.

2002-11-12  Hans-Peter Nilsson  <hp@bitrange.com>
        * lib/libgloss.exp (newlib_include_flags): Use -isystem, not -I.
        (libio_include_flags, g++_include_flags, libstdc++_include_flags,
        winsup_include_flags): Ditto.
        * doc/user.sgml (Local Config File): Use -isystem, not -I, in
        example.

2002-11-21 Matt Bemis <bemis@iol.unh.edu>
		*modified xml_output to handle null input and output
		
2002-10-21  Adam Nemet  <anemet@lnxw.com>
        * libgloss.exp (get_multilibs): Don't use the first argument
        passed to this function as the multilib option unless it is in
        fact a multilib option.

2002-11-13 Matt Bemis <bemis@iol.unh.edu>
	* Fixed input/output to check for empty.

2002-11-12  Hans-Peter Nilsson  <hp@bitrange.com>
        * lib/libgloss.exp (newlib_include_flags): Use -isystem, not -I.
        (libio_include_flags, g++_include_flags, libstdc++_include_flags,
        winsup_include_flags): Ditto.
        * doc/user.sgml (Local Config File): Use -isystem, not -I, in
        example.

2002-10-29  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
	* Makefile.am: Add support for DESTDIR.
	* Makefile.in: Regenerated.

2002-10-21  Matt Bemis  <bemis@iol.unh.edu>
       * added input/output to xml_output in lib/framework.exp
       * removed the log feature replaced by input/output_xml

2002-09-24  Richard Earnshaw  <rearnsha@arm.com>

        * lib/libgloss.exp (build_wrapper): Use a tool-specific filename on
        the host for the testglue.

2002-09-04  Rob Savoye  <rob@welcomehome.org>

	* Clean.tcl (cleanfiles): Add more patterns to remove.
	* Makefile.am: Fix tarball target to clean up the source tree
	better.

2002-09-03  Rob Savoye  <rob@welcomehome.org>

	* Makefile.am: Add support to build Solaris and HPUX packages.
	* Makefile.in: Regenerated with automake 1.6.