@@ -1,3 +1,7 @@
+2003-02-19  DJ Delorie  <dj@redhat.com>
+
+        * config/sim.exp: Support both sid and rawsid protocols.
+
 2003-01-31  Kazu Hirata  <kazu@cs.umass.edu>
 
         * dejagnu/baseboards/h8300-sim.exp: Don't set
